third_party/move/move-compiler-v2/tests/reference-safety/immu_borrow_bug.old.exp

Diagnostics:
error: cannot immutably borrow since mutable references exist
   ┌─ tests/reference-safety/immu_borrow_bug.move:15:9
   │
14 │         common.x = 15;
   │         --------
   │         │
   │         used by field borrow
   │         previous mutable local borrow
15 │         common.x
   │         ^^^^^^--
   │         │
   │         requirement enforced here
   │         immutable borrow attempted here
